@@ -1,5 +1,15 @@
 2003-04-04  David Hyatt  <hyatt@apple.com>
 
+	Fix for the Search button cutoff on livepage.apple.com  We
+	weren't honoring hspace/vspace on input elements.
+	
+        Reviewed by darin
+
+        * khtml/html/html_formimpl.cpp:
+        (HTMLInputElementImpl::parseAttribute):
+
+2003-04-04  David Hyatt  <hyatt@apple.com>
+
 	Fix for 3218085.  Remove the bogus 2cm print rule for body in the
 	html4.css sheet.
 	
